# serna-free

./: .gitignore  AUTHORS  GPL_EXCEPTION.txt  INSTALL  LICENSE.GPL  Makefile.pro  README.FIRST  TODO  build.bat  build.sh  defaults.pro  win32env.bat
3rd/: .gitignore  README  TMakefile.pro  build  build.bat  buildopts  buildopts.bat  checked_build.bat  checked_build.sh  configure  configure.bat  defaults.pro  functions  instwrapper.pl  tools.pro
3rd/antlr/: TMakefile.pro  antlr-default.t  antlr-defaults.pro  antlr-unix.pro  antlr-win32.pro
3rd/aspell/: MANIFEST.aspell  TMakefile.pro  aspell-default.t  aspell-defaults.pro  install.bat  install.sh
3rd/dita-ot/: CatalogManager.properties  TMakefile.pro  dita-ot-default.t  dita-ot-defaults.pro  dita2html.cmd  dita2html.sh
3rd/docbook/: MANIFEST  TMakefile.pro  docbook-default.t  docbook-defaults.pro  docbook2html.cmd  docbook2html.sh
3rd/doxygen/: TMakefile.pro  doxygen-default.t  doxygen-defaults.pro  install.bat  install.sh
3rd/hunspell/: MANIFEST  TMakefile.pro  hunspell-defaults.pro  install.bat  install.sh
3rd/iconv/: MANIFEST.iconv  TMakefile.pro  iconv-default.t  iconv-defaults.pro  iconv-unix.pro  iconv-win32.pro  install.bat  install.sh
3rd/jade/: ALL.pro  FILES  GNUmakefile  MREP  README  TMakefile.pro  config.cache  config.status  configure  install.bat  install.sh  jade-default.t  jade-defaults.pro  msggen.pl
3rd/jade/config/: aclocal.m4  configure.in
3rd/jdk/: TMakefile.pro  java-included.t  java-system.t  jdk-default.t  jdk-defaults.pro
3rd/libxml/: MANIFEST.xml2  TMakefile.pro  install.bat  install.sh  libxml-default.t  libxml-defaults.pro  libxml-unix.pro  libxml-win32.pro
3rd/libxml-python/: MANIFEST  ModMakefile  TMakefile.pro  install.bat  libxml-python.t
3rd/pyqt/: MANIFEST.PyQt4  TMakefile.pro  install.bat  install.sh  pyqt-default.t  pyqt-defaults.pro
3rd/python/: MANIFEST.python  MANIFEST.python.darwin  MANIFEST.python.sunos  MANIFEST.python.unix  MANIFEST.python.win32  TMakefile.pro  python-default.t  python-defaults.pro  python-unix.pro  python-win32.pro
3rd/qscintilla/: MANIFEST.qscintilla  TMakefile.pro  install.bat  install.sh  qscintilla-default.t  qscintilla-defaults.pro
3rd/qt/: MANIFEST.qt  TMakefile.pro  fixincludes.py  install.bat  install.sh  qconfig.pl  qt-darwin.pro  qt-default.t  qt-defaults.pro  qt-unix.pro  qt-win32.pro  qtdir.t
3rd/qtpropertybrowser/: MANIFEST.qtpropertybrowser  TMakefile.pro  install.bat  install.sh  qtpropertybrowser-default.t  qtpropertybrowser-defaults.pro
3rd/qtsingleapplication/: MANIFEST.qtsingleapplication  TMakefile.pro  install.bat  install.sh  qtsingleapplication-default.t  qtsingleapplication-defaults.pro
3rd/sip/: TMakefile.pro  getsipdir.py  install.bat  install.sh  sip-default.t  sip-defaults.pro
3rd/xsltproc/: LIBICONV-COPYING  MANIFEST.xsltproc  TMakefile.pro  XSLTPROC-COPYING  install.bat  install.sh  xsltproc-default.t  xsltproc-defaults.pro  xsltproc-win32.pro
debian/3rd/: hunspell-bin-1.3.tgz
serna/: Makefile.pro
serna/app/: APPVER  ASPELL-COPYING  ASPELL-EN-COPYING  EULA.txt  FREETYPE.LICENSE  LIBGCC.LICENSE  LIBSTDC++.LICENSE  MANIFEST.PyQt4  MANIFEST.all  MANIFEST.dita  MANIFEST.dita-faq  MANIFEST.dita-ot-131  MANIFEST.dita-ot-14  MANIFEST.ditahelp  MANIFEST.doc-dita  MANIFEST.doc-dita.built  MANIFEST.docbook  MANIFEST.idealliance  MANIFEST.nitf  MANIFEST.pyapi  MANIFEST.python  MANIFEST.python.darwin  MANIFEST.python.sunos  MANIFEST.python.unix  MANIFEST.python.win32  MANIFEST.sapi  MANIFEST.sapi-docs  MANIFEST.sapi_py-docs  MANIFEST.speller  MANIFEST.syntext  MANIFEST.tei  MANIFEST.xhtml  Makefile.dynexports  Makefile.pro  NEON-COPYING  README.TXT  SP-COPYING  TGZ-INSTALL  appver.t  catalog.t  (+28 more)
serna/core/: AxSerna.h  DocBuilders.h  EmptyDocument.h  Makefile.pro  Preferences.h  Serna.h  core_defs.h  debug_core.h  icons-list  serna_main.h
serna/dll/: Makefile.pro  bigdll.def  bigdll.t
serna/docutils/: Makefile.pro  adp2qhp.xsl  check_mft.py  check_tags.py  db-pics.t  db-pics.xsl  dita-sources.t  dita.t  doc.t  doc_defs.h  docbook.t  doctags.h  index.html  make_tags_cpp.py  qhc_list.py  replace.py  sapi.dxg  serna.qhcp  topicrefs.xsl
serna/docview/: BuiltinUiCommands.h  Clipboard.h  DocBuilder.h  DocumentPlugin.h  DocumentStateEventData.h  DocumentStateFactory.h  EventTranslator.h  Finder.h  GoToOriginEventData.h  InsertSymbolItem.h  Makefile.pro  MessageTree.h  MessageTreeHolder.h  MessageView.h  MessageViewHolder.h  PluginLoader.h  SernaDoc.h  dv_defs.h  dv_utils.h
sfworks/: Makefile.pro  README  common.rc
(+2340 files in other folders)
